--- a/index.html
+++ b/index.html
@@ -1,82 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>小白论坛_小白百科</title>
-<style>
-
-    .container {
-        width: 80%;
-        margin: auto;
-        overflow: hidden;
-    }
-    .header {
-        color: black;
-        padding: 20px 0;
-        text-align: center;
-    }
-    .content {
-        background: #fff;
-        padding: 20px;
-        margin-top: 20px;
-    }
-    .image {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    .image img {
-        max-width: 100%;
-        height: auto;
-    }
-    .title {
-        font-size: 24px;
-        color: #333;
-        margin-bottom: 10px;
-    }
-    .description {
-        font-size: 16px;
-        color: #666;
-        line-height: 1.6;
-    }
-    .parent-title {
-        font-size: 20px;
-        color: #333;
-        margin: 20px 0;
-    }
-    .share-buttons {
-        text-align: center;
-        margin-top: 20px;
-    }
-    .share-buttons a {
-        margin: 0 5px;
-        text-decoration: none;
-        color: #333;
-    }
-    .share-buttons img {
-        width: 30px;
-        height: 30px;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>小白论坛</title>
+    <style>
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        .short-drama-card {
+            background: #fff;
+            padding: 30px;
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+        .short-drama-image {
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+            margin-top: 20px;
+            border-radius: 5px;
+        }
+        .short-drama-info {
+            margin-top: 15px;
+        }
+        .card-button {
+            width: -1;
+            height: 45px;
+            background-color: #07C160;
+            color: white;
+            text-align: center;
+            line-height: 50px;
+            text-decoration: none;
+            display: block;
+            margin: 20px auto 0;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .card-button:hover {
+            background-color: #059e4d;
+        }
+        .footer-info {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <div class="content">
-            <div class="image">
-                <img src="https://s21.ax1x.com/2024/08/07/pkxjlqJ.png">
+        <div class="short-drama-card">
+            <img src="https://s21.ax1x.com/2024/08/07/pkxDVhT.png" class="short-drama-image">
+            <div class="short-drama-info">
+                <h2>小白论坛</h2>
+<h4>我的世界社区类应用</h4>
+           <p>小白论坛是一款MC玩家交流社区，在这里你可以上传自己的模组，也可以下载别人发布的模组，发布自己的生活日常，但是请不要发布违规违法的内容，一旦发现我们将会对您的账号进行封号，用户要是发现有违规内容，可以举报该内容给官方，经过核实，如果的确出现违规内容，将奖励20绿宝石，共创文明社区。</p>
             </div>
-            <div class="title">
-                小白论坛
-            </div>
-<style>
-a.no-underline {
-    text-decoration: none;
-    color: #4070A0;
-}
-</style>
-            <div class="description">
-                小白论坛是一款<a href="https://baike.baidu.com/item/我的世界/6036091" class="no-underline">我的世界</a>社区类软件。
-            </div>
+            <a href="https://xiaobaiforum.github.io/xiaobaiforum/小白论坛.apk" class="card-button">下载小白论坛</a>
+        </div>
     </div>
 </body>
 </html>
