--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h3>应用截图</h3>
       <img class="image" src="home.jpg">
       <img class="image" src="hd.jpg">
-      <img class="image" src="zy.jpg">
+      <img class="image" src="mod.jpg">
       <img class="image" src="my.jpg">
     </div>
   </div>
